[gd_scene load_steps=6 format=2]

[ext_resource path="res://2D Scene/Top-Down Shooter/Textures/Happy.png" type="Texture" id=1]
[ext_resource path="res://2D Scene/Top-Down Shooter/Script/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 17.1172

[sub_resource type="CircleShape2D" id=2]
radius = 272.265

[sub_resource type="CircleShape2D" id=3]
radius = 14.0357

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="EnemyCollider" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="EnemyCollider"]
shape = SubResource( 1 )

[node name="Follow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Follow"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="EnemyCollider" to="." method="_on_EnemyCollider_body_entered"]
[connection signal="body_entered" from="Follow" to="." method="_on_Follow_area_entered"]
[connection signal="body_exited" from="Follow" to="." method="_on_Follow_area_exited"]
